k8s/platform/argocd/base/dex-server-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-dex-server
spec:
  template:
    spec:
      priorityClassName: platform-critical
      nodeSelector:
        node-pool-role: platform
      tolerations:
        - key: node-pool-role
          operator: Equal
          value: platform
          effect: NoSchedule
      containers:
        - name: dex
          securityContext:
            allowPrivilegeEscalation: false
