k8s/platform/argocd/base/notifications-controller-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-notifications-controller
spec:
  template:
    spec:
      priorityClassName: platform-critical
      nodeSelector:
        node-pool-role: platform
      tolerations:
        - key: node-pool-role
          operator: Equal
          value: platform
          effect: NoSchedule
