k8s/platform/argocd/base/repo-server-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      priorityClassName: platform-critical
      nodeSelector:
        node-pool-role: platform
      tolerations:
        - key: node-pool-role
          operator: Equal
          value: platform
          effect: NoSchedule
      containers:
        - name: argocd-repo-server
          securityContext:
            allowPrivilegeEscalation: false
          resources:
            requests:
              cpu: 60m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
